--- a/frontend/admin.html
+++ b/frontend/admin.html
@@ -1,57 +1,73 @@
 <!doctype html>
-<html lang="tr">
+<html lang="tr" data-theme="dark">
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Admin Paneli</title>
-  <style>
-    body{font-family:system-ui,Segoe UI,Arial,sans-serif;max-width:720px;margin:40px auto;padding:0 16px;background:#0b0b0b;color:#fff}
-    .card{background:#111;border:1px solid #222;border-radius:12px;padding:16px;margin:16px 0}
-    label{display:block;margin:8px 0 4px}
-    input,button,textarea{width:100%;padding:10px;border-radius:8px;border:1px solid #333;background:#0e0e0e;color:#fff}
-    button{cursor:pointer}
-    button:hover{background:#161616}
-    .row{display:grid;gap:10px;grid-template-columns:1fr 1fr}
-    pre{white-space:pre-wrap;word-break:break-word;background:#0e0e0e;border:1px solid #222;border-radius:8px;padding:12px}
-    .ok{color:#8cff9e}.err{color:#ff7b7b}
-  </style>
+  <link rel="stylesheet" href="./admin.css" />
 </head>
 <body>
-  <h1>Admin Paneli</h1>
+  <!-- Uçuşan çizgiler için tam ekran canvas -->
+  <canvas id="bgCanvas" aria-hidden="true"></canvas>
 
-  <!-- Giriş -->
-  <div class="card">
-    <h2>Giriş</h2>
-    <form id="admin-login-form">
-      <label for="email">E-posta</label>
-      <input id="email" name="email" type="email" placeholder="admin@site.com" required />
-
-      <label for="password">Şifre</label>
-      <input id="password" name="password" type="password" placeholder="••••••••" required />
-
-      <button id="login-btn" type="submit">Giriş Yap</button>
-    </form>
-    <p id="admin-status"></p>
-  </div>
-
-  <!-- Hızlı işlemler -->
-  <div class="card">
-    <h2>Mesajlar</h2>
-    <div class="row">
-      <button id="btn-list-messages" type="button">Mesajları Listele</button>
-      <button id="admin-logout" type="button">Çıkış</button>
+  <!-- Üst bar -->
+  <header class="topbar">
+    <div class="brand">Admin Paneli</div>
+    <div class="actions">
+      <button id="themeToggle" class="btn ghost" title="Tema Değiştir">🌗 Tema</button>
     </div>
-    <pre id="admin-output">Henüz veri yok.</pre>
-    <ul id="messages-list"></ul>
-  </div>
+  </header>
 
-  <!-- API tabanını MUTLAKA scripts'ten ÖNCE set et -->
+  <!-- İçerik -->
+  <main class="container">
+    <!-- LOGIN VIEW -->
+    <section id="view-login" class="card">
+      <h2>Giriş</h2>
+      <form id="admin-login-form" autocomplete="on">
+        <label for="email">E-posta</label>
+        <input id="email" name="email" type="email" placeholder="admin@site.com" required />
+
+        <label for="password">Şifre</label>
+        <input id="password" name="password" type="password" placeholder="••••••••" required />
+
+        <div class="row">
+          <button id="login-btn" type="submit" class="btn primary">Giriş Yap</button>
+        </div>
+      </form>
+      <p id="admin-status" class="muted"></p>
+    </section>
+
+    <!-- DASHBOARD VIEW -->
+    <section id="view-dashboard" class="hidden">
+      <div class="grid">
+        <div class="card kpi">
+          <h3>Mesajlar</h3>
+          <p class="kpi-number" id="kpi-messages">—</p>
+          <div class="row">
+            <button id="btn-refresh" class="btn">Yenile</button>
+            <button id="admin-logout" class="btn ghost">Çıkış</button>
+          </div>
+        </div>
+
+        <div class="card">
+          <h3>Gelen Mesajlar</h3>
+          <div id="msgGrid" class="msg-grid">
+            <!-- kartlar JS ile gelecek -->
+          </div>
+        </div>
+      </div>
+    </section>
+  </main>
+
+  <!-- API tabanını JS'lerden ÖNCE set et -->
   <script>
-    // Prod backend (Render)
+    // PROD (Render):
     window.__API_BASE__ = "https://evencreed.onrender.com/api";
-    // Lokal çalışırken yukarıyı yorum satırı yapıp aşağıyı açabilirsin:
+    // Lokal geliştirirken üst satırı yorumlayıp şunu açabilirsin:
     // window.__API_BASE__ = "http://localhost:4000/api";
   </script>
+
   <script src="./admin.js"></script>
 </body>
 </html>
+
