--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,7 +4,12 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Kişisel Site</title>
-  <link rel="stylesheet" href="./styles.css?v=8" />
+
+  <!-- Hızlı ve profesyonel ince font -->
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter+Tight:wght@400;600;800&display=swap" rel="stylesheet">
+
+  <link rel="stylesheet" href="./styles.css?v=9" />
   <meta name="color-scheme" content="dark light">
 </head>
 <body>
@@ -19,7 +24,7 @@
         <li><a href="#hobbies">Hobiler</a></li>
         <li><a href="#contact">İletişim</a></li>
       </ul>
-      <button id="themeToggle" class="btn ghost" title="Tema Değiştir">🌗</button>
+      <button id="themeToggle" class="btn navbtn" title="Tema Değiştir">🌗</button>
     </nav>
   </header>
 
@@ -98,6 +103,6 @@
     // Lokal geliştirirken üst satırı yorumlayıp şunu aç:
     // window.__API_BASE__ = "http://localhost:4000/api";
   </script>
-  <script src="./app.js?v=8"></script>
+  <script src="./app.js?v=9"></script>
 </body>
 </html>
