--- a/frontend/index.html
+++ b/frontend/index.html
@@ -41,7 +41,7 @@
     <!-- HERO -->
     <section class="card hero">
       <div class="hex">
-        <img src="./assets/me.jpg" alt="Fotoğrafım" onerror="this.style.display='none'">
+        <img src="./assets/profile.jpeg" alt="Fotoğrafım" onerror="this.style.display='none'">
       </div>
 
       <div class="hero-copy float">
