--- a/frontend/index.html
+++ b/frontend/index.html
@@ -45,7 +45,7 @@
       </div>
 
       <div class="hero-copy float">
-        <h1><span data-i18n="hero.title" data-i18n-params='{"name":"Mert"}'>Merhaba, ben Mert 👋</span></h1>
+        <h1><span data-i18n="hero.title" data-i18n-params='{"name":"Mert"}'>Mert Topaçoğlu 👋</span></h1>
         <p class="muted" data-i18n="hero.desc">
           Rock / piyano esintili siyah-beyaz palet. Minimal ama canlı.
           Aşağıdan CV’ye bakabilir, bana mesaj bırakabilirsin.
