--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Kişisel Site</title>
+  <title>Mert Topaçoğlu</title>
 
   <!-- İnce/pro font -->
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -18,7 +18,7 @@
 
   <header class="topbar">
     <nav class="nav">
-      <a href="#home" class="brand" data-i18n="nav.brand">evencreed</a>
+      <a href="#home" class="brand" data-i18n="nav.brand">Evencreed</a>
       <ul class="links">
         <li><a href="#cv" data-i18n="nav.cv">CV</a></li>
         <li><a href="#hobbies" data-i18n="nav.hobbies">Hobiler</a></li>
@@ -67,14 +67,16 @@
         <li data-i18n="cv.item3">DevOps: Vercel + Render + Supabase</li>
       </ul>
       <div class="row">
-        <a class="btn" href="./assets/cv.pdf" target="_blank" rel="noreferrer" data-i18n="cv.download">PDF İndir</a>
+        <a class="btn" href="./assets/cv.pdf" target="_blank" rel="noreferrer" data-i18n="cv.download">CV İndir</a>
       </div>
     </section>
 
     <!-- Hobiler -->
     <section id="hobbies" class="card">
       <h2 data-i18n="hobbies.title">Hobiler</h2>
-      <p data-i18n="hobbies.desc">Müzik (piyano), rock dinlemek, fotoğrafçılık, minimal tasarım.</p>
+      <p data-i18n="hobbies.desc">Aynı zamanda müzik prodüksiyonuyla uğraşıyorum; seslerle hikâye kurmayı ve duyguyu teknikle buluşturmayı seviyorum.
+        Boş zamanlarımda dövme sanatıyla uğraşıyor, aksiyon sporlarının adrenaliniyle enerjimi tazeliyorum. 
+        Satranç ise strateji ve odak tarafımı canlı tutuyor, dengemi sağlıyor.</p>
     </section>
 
     <!-- İletişim -->
@@ -105,7 +107,7 @@
   </main>
 
   <footer class="footer">
-    <small>© <span id="year"></span> evencreed</small>
+    <small>© <span id="year"></span> Evencreed</small>
   </footer>
 
   <!-- API tabanı: JS'den önce set et -->
