--- a/frontend/index.html
+++ b/frontend/index.html
@@ -47,8 +47,13 @@
       <div class="hero-copy float">
         <h1><span data-i18n="hero.title" data-i18n-params='{"name":"Mert"}'>Mert Topaçoğlu</span></h1>
         <p class="muted" data-i18n="hero.desc">
-          Rock / piyano esintili siyah-beyaz palet. Minimal ama canlı.
-          Aşağıdan CV’ye bakabilir, bana mesaj bırakabilirsin.
+        Ben Mert Topaçoğlu(Evencreed). Kod yazmak benim için sadece bir iş değil, aynı zamanda yaratıcılığımı ifade etmenin bir yolu.
+          Frontend’de HTML, CSS, JavaScript ve React ile modern, kullanıcı dostu arayüzler kurmayı seviyorum. 
+          Backend tarafında Node.js, Express ve Prisma ile güçlü ve esnek uygulamalar geliştiriyorum. 
+          Postgres ile veriyi düzenli ve anlamlı hale getirmek benim için ayrı bir keyif.
+          Yeni teknolojiler öğrenmekten hoşlanıyorum; özellikle TypeScript, Next.js ve GraphQL üzerinde kendimi sürekli geliştirmeye çalışıyorum. 
+          Projelerimi hayata geçirirken Vercel, Render ve Supabase gibi platformlarla fikirlerimi hızla dünyaya açmak bana enerji veriyor. 
+          Kısacası; hem düzeni hem de özgünlüğü önemseyen, yazılımı bir sanat gibi gören biriyim.
         </p>
         <div class="row">
           <a class="btn primary" href="#cv" data-i18n="btn.cv">CV Gör</a>
