--- a/frontend/index.html
+++ b/frontend/index.html
@@ -111,6 +111,25 @@
     </section>
   </main>
 
+  <!-- Sosyal Medya Bölümü -->
+<section class="social-links">
+  <a href="https://www.linkedin.com/in/kullanici-adin" target="_blank" aria-label="LinkedIn">
+    <i class="fab fa-linkedin"></i>
+  </a>
+  <a href="https://www.instagram.com/kullanici-adin" target="_blank" aria-label="Instagram">
+    <i class="fab fa-instagram"></i>
+  </a>
+  <a href="https://www.spotify.com/kullanici-adin" target="_blank" aria-label="Müzik">
+    <i class="fab fa-spotify"></i>
+  </a>
+  <a href="https://www.tattoo.com/kullanici-adin" target="_blank" aria-label="Dövme">
+    <i class="fas fa-pen-nib"></i>
+  </a>
+</section>
+
+<!-- FontAwesome Kütüphanesi -->
+<script src="https://kit.fontawesome.com/your-kit-id.js" crossorigin="anonymous"></script>
+
   <footer class="footer">
     <small>© <span id="year"></span> Evencreed</small>
   </footer>
