--- a/frontend/index.html
+++ b/frontend/index.html
@@ -109,9 +109,8 @@
         <p id="contact-status" class="muted"></p>
       </form>
     </section>
-  </main>
 
-  <!-- Sosyal Medya Bölümü -->
+    <!-- Sosyal Medya Bölümü -->
 <section class="social-links">
   <a href="https://www.linkedin.com/in/kullanici-adin" target="_blank" aria-label="LinkedIn">
     <i class="fab fa-linkedin"></i>
@@ -126,7 +125,11 @@
     <i class="fas fa-pen-nib"></i>
   </a>
 </section>
+    
+    
+ </main>
 
+ 
 <!-- FontAwesome Kütüphanesi -->
 <script src="https://kit.fontawesome.com/your-kit-id.js" crossorigin="anonymous"></script>
 
@@ -141,6 +144,9 @@
     // Lokal geliştirirken üst satırı yorumlayıp şunu aç:
     // window.__API_BASE__ = "http://localhost:4000/api";
   </script>
+  <!-- FontAwesome Kütüphanesi -->
+<script src="https://kit.fontawesome.com/your-kit-id.js" crossorigin="anonymous"></script>
+
   <script src="./i18n.js?v=11"></script>
   <script src="./app.js?v=10"></script>
 </body>
