--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,7 +8,8 @@
   <!-- İnce/pro font -->
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter+Tight:wght@400;600;800&display=swap" rel="stylesheet">
-
+<!-- FontAwesome CDN -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"/>
   <link rel="stylesheet" href="./styles.css?v=10" />
   <meta name="color-scheme" content="dark light">
 </head>
@@ -110,7 +111,7 @@
       </form>
     </section>
 
-    <!-- Sosyal Medya Bölümü -->
+<!-- Sosyal Medya Bölümü -->
 <section class="social-links">
   <a href="https://www.linkedin.com/in/kullanici-adin" target="_blank" aria-label="LinkedIn">
     <i class="fab fa-linkedin"></i>
@@ -125,13 +126,12 @@
     <i class="fas fa-pen-nib"></i>
   </a>
 </section>
-    
+
+
     
  </main>
 
  
-<!-- FontAwesome Kütüphanesi -->
-<script src="https://kit.fontawesome.com/your-kit-id.js" crossorigin="anonymous"></script>
 
   <footer class="footer">
     <small>© <span id="year"></span> Evencreed</small>
@@ -144,8 +144,7 @@
     // Lokal geliştirirken üst satırı yorumlayıp şunu aç:
     // window.__API_BASE__ = "http://localhost:4000/api";
   </script>
-  <!-- FontAwesome Kütüphanesi -->
-<script src="https://kit.fontawesome.com/your-kit-id.js" crossorigin="anonymous"></script>
+
 
   <script src="./i18n.js?v=11"></script>
   <script src="./app.js?v=10"></script>
