--- a/frontend/index.html
+++ b/frontend/index.html
@@ -89,7 +89,7 @@
         <li data-i18n="cv.item3">DevOps: Vercel + Render + Supabase</li>
       </ul>
       <div class="row">
-        <a class="btn" href="./assets/cv.pdf" target="_blank" rel="noreferrer" data-i18n="cv.download">CV İndir</a>
+        <a class="btn" href="./assets/Mert Topaçoğlu CV.pdf" target="_blank" rel="noreferrer" data-i18n="cv.download">CV İndir</a>
       </div>
     </section>
 
