--- a/frontend/index.html
+++ b/frontend/index.html
@@ -63,16 +63,16 @@
       </div>
       <!-- Sosyal Medya Bölümü -->
 <section class="social-links">
-  <a href="https://www.linkedin.com/in/kullanici-adin" target="_blank" aria-label="LinkedIn">
+  <a href="https://www.linkedin.com/in/mert-topaçoğlu-a43425301" target="_blank" aria-label="LinkedIn">
     <i class="fab fa-linkedin"></i>
   </a>
-  <a href="https://www.instagram.com/kullanici-adin" target="_blank" aria-label="Instagram">
+  <a href="https://www.instagram.com/nara.merto" target="_blank" aria-label="Instagram">
     <i class="fab fa-instagram"></i>
   </a>
-  <a href="https://www.spotify.com/kullanici-adin" target="_blank" aria-label="Müzik">
+  <a href="https://open.spotify.com/intl-tr/artist/5lTPIgkluvfIieH4tqVTPb?si=MYg-xZ-bTayuZJ3JkcmzRw" target="_blank" aria-label="Müzik">
     <i class="fab fa-spotify"></i>
   </a>
-  <a href="https://www.tattoo.com/kullanici-adin" target="_blank" aria-label="Dövme">
+  <a href="https://https://www.instagram.com/naraink.studio" target="_blank" aria-label="Dövme">
     <i class="fas fa-pen-nib"></i>
   </a>
 </section>
