--- a/frontend/index.html
+++ b/frontend/index.html
@@ -72,7 +72,7 @@
   <a href="https://open.spotify.com/intl-tr/artist/5lTPIgkluvfIieH4tqVTPb?si=MYg-xZ-bTayuZJ3JkcmzRw" target="_blank" aria-label="Müzik">
     <i class="fab fa-spotify"></i>
   </a>
-  <a href="https://https://www.instagram.com/naraink.studio" target="_blank" aria-label="Dövme">
+  <a href="https://www.instagram.com/naraink.studio" target="_blank" aria-label="Dövme">
     <i class="fas fa-pen-nib"></i>
   </a>
 </section>
