--- a/frontend/index.html
+++ b/frontend/index.html
@@ -19,7 +19,7 @@
 
   <header class="topbar">
     <nav class="nav">
-      <a href="#home" class="brand" data-i18n="nav.brand">Evencreed</a>
+      <a href="/" class="brand" data-i18n="nav.brand">Evencreed</a>
       <ul class="links">
         <li><a href="#cv" data-i18n="nav.cv">CV</a></li>
         <li><a href="#hobbies" data-i18n="nav.hobbies">Hobiler</a></li>
