--- a/frontend/index.html
+++ b/frontend/index.html
@@ -75,6 +75,9 @@
   <a href="https://www.instagram.com/naraink.studio" target="_blank" aria-label="Dövme">
     <i class="fas fa-pen-nib"></i>
   </a>
+  <a href="https://github.com/evencreed" target="_blank" aria-label="GitHub">
+  <i class="fab fa-github"></i>
+</a>
 </section>
 
     </section>
